# RT2RT

./: .gitignore  LICENSE  README.md
C++/: 配置.txt
C++/rt2rt_project/: rt2rt_project.sln
C++/rt2rt_project/rt2rt_project/: rt2rt_project.cpp  rt2rt_project.vcxproj  rt2rt_project.vcxproj.filters
rust/: Cargo.toml  package.json  扫描线算法.html
rust/json/: RT_fmt.json  line_result.json  rt_coord_result.json
rust/src/: RT_fmt.json  RT_px_data.json  index.js  lib.rs  main.rs  rt2rt.js  rust.js
rust/src/init_data/: calc_rt_bounds.rs  init_json.rs  mod.rs
rust/src/output_json/: output.rs
rust/src/pixel_processing/: build_xy_rt.rs  line_processing.rs  magic_wand.rs  mod.rs  scan_line.rs
rust/src/volume_tools/: volume.rs
vite/: package-lock.json  package.json  vite.config.js
vite/public/: sw.js
vite/src/: App.jsx  Home.jsx  Webgpu.jsx  json.js  main.jsx  router.jsx
vite/src/page/babylon/: index.jsx
vite/src/page/orillusion/: index.jsx
vite/src/page/three/: index.jsx
vite/src/page/wgpu/: camera.js  index.jsx  renderer.js  scene.js  shaders.wgsl  sphere.js  triangle_mesh.js
vite/src/page/wgpu/control/: app.js
vite/src/wgpu/: index.jsx  shaders.wgsl
web/: package-lock.json  package.json
web/publish/: WebpackTools.js  config.js  devServer.js  webpack.config.js
web/src/asset/data/: body_error.json  data.json
web/src/common/style/: colorForm.scss  common.scss  profile.scss
web/src/common/temp/: temp.html
web/src/core/: Contour.js  Page.js  Service.js
web/src/core/lib/: cuon-matrix.js  cuon-utils.js
web/src/views/index/: index.js  route.js
(+23 files in other folders)
