[package]
name = "rt2rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.87"
wasm-bindgen = "0.2.83"
# serde = "1.0.147"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
